Add empty favicon to get rid of 404

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>MySQL</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
