--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="plugins/highlight/styles/atom-one-dark.min.css">
 </head>
 
 <body>
@@ -14,6 +15,7 @@
     <script type="text/javascript" src="assets/js/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="assets/js/jquery.console.js"></script>
     <script src="assets/js/wasm_exec.js"></script>
+    <script src="plugins/highlight/highlight.min.js"></script>
     <script src="assets/js/app.js"></script>
 </body>
 </html>
